
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/messages_header">

        <ListPreference
            app:defaultValue="red"
            app:entries="@array/textColorEntries"
            app:entryValues="@array/textColorValues"
            app:key="textColorKey"
            app:title="@string/textColorText"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="middle"
            app:entries="@array/positionEntries"
            app:entryValues="@array/positionValues"
            app:key="positionKey"
            app:title="@string/positionChoiceString"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="1000"
            android:key="textViewSizeKey"
            android:title="@string/texBoxSizeString"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:maxLines="1"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="center_inside"
            app:entries="@array/scaleTypeEntries"
            app:entryValues="@array/scaleTypeValues"
            app:key="scaleTypeKey"
            app:title="@string/imageScaleTypeString"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="black"
            app:entries="@array/textColorEntries"
            app:entryValues="@array/textColorValues"
            app:key="widgetTextColorKey"
            app:title="@string/widgetTextColor"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="Change this text in the Settings menu"
            android:key="textDescKey"
            android:title="@string/textDescTitle"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:maxLines="1"
            app:useSimpleSummaryProvider="true"/>

        <CheckBoxPreference
            android:title="Use this memorial for the widget"
            android:key="widgetUseKey"
            android:defaultValue="false"
            android:summaryOn="Enabled in widget (only one memorial can be shown)"
            android:summaryOff="Disabled in widget"/>

    </PreferenceCategory>

</PreferenceScreen>