<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="6dp"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/textview_label_item"
                android:textSize="@dimen/cardViewTextSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/myCalculatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dateLabel"
                android:textSize="@dimen/cardViewTextSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/textViewLabel"
                app:layout_constraintTop_toBottomOf="@id/textViewLabel" />

            <TextView
                android:id="@+id/myUpdatedDateString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/date_string"
                android:textSize="@dimen/cardViewTextSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/textViewLabel"
                app:layout_constraintTop_toBottomOf="@id/myCalculatedDate" />

            <ImageView
                android:id="@+id/imageThumb"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/image_thumbnail"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_test_foreground"
                app:layout_constraintStart_toEndOf="@id/myCalculatedDate"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>