<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.jshobbysoft.memoru.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_semitransparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_settings_test_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="400sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/viewString"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="68 days XX hours YY minutes ZZ seconds" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="00dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/since_start_date_placeholder"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/buttonLoadPicture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="68 days XX hours YY minutes ZZ seconds" />

<!--
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/viewString"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="68 days XX hours YY minutes ZZ seconds" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/viewString"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="68 days XX hours YY minutes ZZ seconds" />
-->

    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="@dimen/buttonWidthValue"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonPickDate"
        android:text="@string/load_picture" />

    <Button
        android:id="@+id/buttonPickDate"
        android:layout_width="@dimen/buttonWidthValue"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonPickTime"
        app:layout_constraintStart_toEndOf="@id/buttonLoadPicture"
        android:text="@string/buttonChooseDateLabel" />

    <Button
        android:id="@+id/buttonPickTime"
        android:layout_width="@dimen/buttonWidthValue"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonPickDate"
        android:text="@string/buttonChooseTimeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>